overrides USWDS overflow on body, fixes a few random bugs [affects #270]

--- a/src/stylesheets/core/_fsa.base.scss
+++ b/src/stylesheets/core/_fsa.base.scss
@@ -14,7 +14,7 @@ html {
 
 body {
 
-  overflow-x: auto;
+  overflow-x: initial;
   background-color: $color-fsa-site-bg;
   line-height: $base-line-height;
   color: $color-fsa-base;
